# protogx-network-suite

./: .env.example  .gitignore  README.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
.github/workflows/: ci-cd.yml  deploy.yml
contracts/: Cargo.toml
contracts/quantum-dao/: Cargo.toml
contracts/quantum-dao/meta/src/: main.rs
contracts/quantum-dao/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: analytics.tsx
src/components/games/: QuantumDAO.tsx
src/components/layout/: footer.tsx  navbar.tsx
src/components/providers/: index.tsx  multiversx-provider.tsx
src/components/sections/: game-showcase.tsx  hero.tsx
src/components/ui/: badge.tsx  button.tsx  wallet-connect.tsx
src/lib/: utils.ts
src/lib/ai/: index.ts
src/lib/database/: schema.sql
src/lib/gaming/: engine.ts
src/lib/multiversx/: contracts.ts
