[package]
name = "quantum-dao"
version = "0.1.0"
edition = "2021"
authors = ["George Pricop <pricopgeorge@gmail.com>"]
description = "Quantum DAO Simulator - First game in PROTOGX Network Suite"
license = "MIT"

[lib]
name = "quantum_dao"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "quantum-dao-meta"
path = "meta/src/main.rs"

[dependencies]
multiversx-sc = { workspace = true }
multiversx-sc-derive = { workspace = true }

[dev-dependencies]
multiversx-sc-scenario = { workspace = true }